1. Shrink cats; 2. Used <form>; 3. Illuminated navigation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<ul class="navigation">
-		<li><a href="#">Main</a></li>
+		<li class="location"><a href="#">Main</a></li>
 		<li><a href="./pages/about_us.html">About</a></li>
 		<li><a href="./pages/contacts.html">Contacts</a></li>
 	</ul>
