--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -9,9 +9,9 @@
 	<ul class="navigation">
 		<li><a href="../index.html">Main</a></li>
 		<li><a href="./about_us.html">About</a></li>
-		<li><a href="#">Contacts</a></li>
+		<li class="location"><a href="#">Contacts</a></li>
 	</ul>
-	<div class="form">
+	<form class="form">
 		<div>
 			Имя: <br>
 			<input type="text" name="name"><br>
@@ -23,7 +23,7 @@
 			Сообщение: <br>
 			<textarea></textarea>
 		</div>
-	</div>
+	</form>
 	<div class="car">
 		<img src="../example/smart.png">
 	</div>
