--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -8,7 +8,7 @@
 <body>
 	<ul class="navigation">
 		<li><a href="../index.html">Main</a></li>
-		<li><a href="#">About</a></li>
+		<li class="location"><a href="#">About</a></li>
 		<li><a href="./contacts.html">Contacts</a></li>
 	</ul>
 	<div class="picture">
